# app/models/process_color.py
@@ -12,15 +12,15 @@ from app import util
 from app.operations import *
 
 class ProcessColor(Process):
-    def __init__(self, array_of_parameter: List[Parameter]=None):  # noqa: E501
+    def __init__(self, parameters: List[Parameter]=None):  # noqa: E501
         """ProcessColor - a model defined in Swagger
 
         :param name: The name of this ProcessColor.  # noqa: E501
-        :param array_of_parameter: The array_of_parameter of this ProcessColor.  # noqa: E501
-        :type array_of_parameter: List[Parameter]
+        :param parameters: The parameters of this ProcessColor.  # noqa: E501
+        :type parameters: List[Parameter]
         """
 
-        self._array_of_parameter = array_of_parameter
+        self._parameters = parameters
         super(ProcessColor, self).__init__(requires_params=True,
                                             minimum_params=1,
                                             maximum_params=1,
@@ -42,4 +42,4 @@ class ProcessColor(Process):
 
     def _make_operation(self):
         """fill out the operation with it's parameters"""
-        return self._operation(float(self._array_of_parameter[0]["value"]))
+        return self._operation(float(self._parameters[0]["value"]))
