# app/models/process_rotate.py
@@ -12,15 +12,15 @@ from app import util
 from app.operations import *
 
 class ProcessRotate(Process):
-    def __init__(self, array_of_parameter: List[Parameter]=None):  # noqa: E501
+    def __init__(self, parameters: List[Parameter]=None):  # noqa: E501
         """ProcessRotate - a model defined in Swagger
 
         :param name: The name of this ProcessRotate.  # noqa: E501
-        :param array_of_parameter: The array_of_parameter of this ProcessRotate.  # noqa: E501
-        :type array_of_parameter: List[Parameter]
+        :param parameters: The parameters of this ProcessRotate.  # noqa: E501
+        :type parameters: List[Parameter]
         """
 
-        self._array_of_parameter = array_of_parameter
+        self._parameters = parameters
         super(ProcessRotate, self).__init__(requires_params=True,
                                             minimum_params=1,
                                             maximum_params=1,
@@ -41,4 +41,4 @@ class ProcessRotate(Process):
 
     def _make_operation(self):
         """fill out the operation with it's parameters"""
-        return self._operation(float(self._array_of_parameter[0]["value"]))
+        return self._operation(float(self._parameters[0]["value"]))
